@@ -1212,7 +1212,7 @@ name|segmentsFileName
 init|=
 name|sis
 operator|.
-name|getCurrentSegmentFileName
+name|getSegmentsFileName
 argument_list|()
 decl_stmt|;
 comment|// note: we only read the format byte (required preamble) here!
@@ -9058,7 +9058,7 @@ name|result
 operator|.
 name|newSegments
 operator|.
-name|getCurrentSegmentFileName
+name|getSegmentsFileName
 argument_list|()
 operator|+
 literal|"\""
