@@ -611,59 +611,6 @@ return|return
 name|commits
 return|;
 block|}
-comment|/**    * Reads version number from segments files. The version number is    * initialized with a timestamp and then increased by one for each change of    * the index.    *     * @param directory where the index resides.    * @return version number.    * @throws CorruptIndexException if the index is corrupt    * @throws IOException if there is a low-level IO error    */
-DECL|method|getCurrentVersion
-specifier|public
-specifier|static
-name|long
-name|getCurrentVersion
-parameter_list|(
-name|Directory
-name|directory
-parameter_list|)
-throws|throws
-name|CorruptIndexException
-throws|,
-name|IOException
-block|{
-return|return
-name|SegmentInfos
-operator|.
-name|readCurrentVersion
-argument_list|(
-name|directory
-argument_list|)
-return|;
-block|}
-comment|/**    * Reads commitUserData, previously passed to {@link    * IndexWriter#commit(Map)}, from current index    * segments file.  This will return null if {@link    * IndexWriter#commit(Map)} has never been called for    * this index.    *     * @param directory where the index resides.    * @return commit userData.    * @throws CorruptIndexException if the index is corrupt    * @throws IOException if there is a low-level IO error    *    * @see #getCommitUserData()    */
-DECL|method|getCommitUserData
-specifier|public
-specifier|static
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|getCommitUserData
-parameter_list|(
-name|Directory
-name|directory
-parameter_list|)
-throws|throws
-name|CorruptIndexException
-throws|,
-name|IOException
-block|{
-return|return
-name|SegmentInfos
-operator|.
-name|readCurrentUserData
-argument_list|(
-name|directory
-argument_list|)
-return|;
-block|}
 comment|/**    * Returns<code>true</code> if an index exists at the specified directory.    * @param  directory the directory to check for an index    * @return<code>true</code> if an index exists;<code>false</code> otherwise    * @throws IOException if there is a problem with accessing the index    */
 DECL|method|indexExists
 specifier|public
@@ -798,19 +745,6 @@ specifier|public
 specifier|abstract
 name|long
 name|getVersion
-parameter_list|()
-function_decl|;
-comment|/**    * Retrieve the String userData optionally passed to    * IndexWriter#commit.  This will return null if {@link    * IndexWriter#commit(Map)} has never been called for    * this index.    */
-DECL|method|getCommitUserData
-specifier|public
-specifier|abstract
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|getCommitUserData
 parameter_list|()
 function_decl|;
 comment|/**    * Check whether any new changes have occurred to the    * index since this reader was opened.    *    *<p>If this reader was created by calling {@link #open},      * then this method checks if any further commits     * (see {@link IndexWriter#commit}) have occurred in the     * directory.</p>    *    *<p>If instead this reader is a near real-time reader    * (ie, obtained by a call to {@link    * IndexWriter#getReader}, or by calling {@link #openIfChanged}    * on a near real-time reader), then this method checks if    * either a new commmit has occurred, or any new    * uncommitted changes have taken place via the writer.    * Note that even if the writer has only performed    * merging, this method will still return false.</p>    *    *<p>In any event, if this returns false, you should call    * {@link #openIfChanged} to get a new reader that sees the    * changes.</p>    *    * @throws CorruptIndexException if the index is corrupt    * @throws IOException           if there is a low-level IO error    */
