@@ -1438,7 +1438,7 @@ name|gen
 init|=
 name|SegmentInfos
 operator|.
-name|getCurrentSegmentGeneration
+name|getLastCommitGeneration
 argument_list|(
 name|dir
 argument_list|)
@@ -2045,7 +2045,7 @@ name|gen
 init|=
 name|SegmentInfos
 operator|.
-name|getCurrentSegmentGeneration
+name|getLastCommitGeneration
 argument_list|(
 name|dir
 argument_list|)
@@ -3280,7 +3280,7 @@ name|gen
 init|=
 name|SegmentInfos
 operator|.
-name|getCurrentSegmentGeneration
+name|getLastCommitGeneration
 argument_list|(
 name|dir
 argument_list|)
@@ -3901,7 +3901,7 @@ name|gen
 init|=
 name|SegmentInfos
 operator|.
-name|getCurrentSegmentGeneration
+name|getLastCommitGeneration
 argument_list|(
 name|dir
 argument_list|)
