@@ -3648,21 +3648,6 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|0
-argument_list|,
-name|DirectoryReader
-operator|.
-name|getCommitUserData
-argument_list|(
-name|dir
-argument_list|)
-operator|.
-name|size
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|DirectoryReader
 name|r
 init|=
@@ -3680,7 +3665,10 @@ literal|0
 argument_list|,
 name|r
 operator|.
-name|getCommitUserData
+name|getIndexCommit
+argument_list|()
+operator|.
+name|getUserData
 argument_list|()
 operator|.
 name|size
@@ -3775,23 +3763,6 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"test1"
-argument_list|,
-name|DirectoryReader
-operator|.
-name|getCommitUserData
-argument_list|(
-name|dir
-argument_list|)
-operator|.
-name|get
-argument_list|(
-literal|"label"
-argument_list|)
-argument_list|)
-expr_stmt|;
 name|r
 operator|=
 name|IndexReader
@@ -3807,7 +3778,10 @@ literal|"test1"
 argument_list|,
 name|r
 operator|.
-name|getCommitUserData
+name|getIndexCommit
+argument_list|()
+operator|.
+name|getUserData
 argument_list|()
 operator|.
 name|get
@@ -3851,23 +3825,6 @@ name|w
 operator|.
 name|close
 argument_list|()
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"test1"
-argument_list|,
-name|DirectoryReader
-operator|.
-name|getCommitUserData
-argument_list|(
-name|dir
-argument_list|)
-operator|.
-name|get
-argument_list|(
-literal|"label"
-argument_list|)
-argument_list|)
 expr_stmt|;
 name|dir
 operator|.
