@@ -1212,7 +1212,10 @@ name|t1
 init|=
 name|indexReader
 operator|.
-name|getCommitUserData
+name|getIndexCommit
+argument_list|()
+operator|.
+name|getUserData
 argument_list|()
 operator|.
 name|get
@@ -1227,7 +1230,10 @@ name|t2
 init|=
 name|r2
 operator|.
-name|getCommitUserData
+name|getIndexCommit
+argument_list|()
+operator|.
+name|getUserData
 argument_list|()
 operator|.
 name|get
@@ -1547,6 +1553,8 @@ name|String
 argument_list|>
 name|getCommitUserData
 parameter_list|()
+throws|throws
+name|IOException
 block|{
 name|ensureOpen
 argument_list|()
@@ -1554,7 +1562,10 @@ expr_stmt|;
 return|return
 name|indexReader
 operator|.
-name|getCommitUserData
+name|getIndexCommit
+argument_list|()
+operator|.
+name|getUserData
 argument_list|()
 return|;
 block|}
